--- a/src/pages/styles/Product.css
+++ b/src/pages/styles/Product.css
@@ -4,7 +4,10 @@
 } */
  .ProductH{
     padding: 50px 0 20px;
-    font-weight: 700;
+    /* font-weight: 700; */
+}
+.ProductH h1{
+    font-size: x-large;
 }
 .add-to-cart, .cardbody{
     display: flex;
@@ -37,14 +40,14 @@
     font-weight: 600;
     position: relative;
     left: 25px;
-    bottom: 135px;
+    bottom: 120px;
     background-color: hsl(20, 50%, 98%);
 }
 .add-to-cart:hover{
     background-color: hsl(14, 86%, 42%);
 }
 .text-div{
-    padding: 30px 0 20px;
+    padding: 30px 0 0px;
 }
 .price-col{
     font-weight: 600;
