--- a/src/pages/styles/ItemCheckout.css
+++ b/src/pages/styles/ItemCheckout.css
@@ -25,10 +25,14 @@
     display: flex;
 }
 .wrap{
-    border-bottom: 1px solid red;
     padding-bottom: 10px;
     align-items: center;
     justify-content: space-between;
+}
+.check-border{
+    border-bottom: 1px solid red;
+    border: 2px solid blue;
+
 }
 .wraps{
     align-items: center;
